panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__struct__test_error_anonymous_struct_propagates_qualifiers.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/struct/test_error_anonymous_struct_propagates_qualifiers.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/struct/test_error_anonymous_struct_propagates_qualifiers.c"
   (struct PropagatesQualifiers~0
      (member x `int`)
      (member ∅ `struct ∅~2 complete const`))
   (function-definition
      main~3 `fn() -> int`
      (compound-statement
         (declaration p~5 `struct PropagatesQualifiers~0 complete` (braced ∅))
         (expression
            (assign
               (dot x
                  (name p~5 `struct PropagatesQualifiers~0 complete`))
               1))
         (expression
            (assign
               (dot y
                  (name p~5 `struct PropagatesQualifiers~0 complete`))
               2))
         (expression
            (assign
               (dot l
                  (name p~5 `struct PropagatesQualifiers~0 complete`))
               3)))))

----- stderr -----
