panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__struct__test_error_assign_to_member_of_const_struct.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/struct/test_error_assign_to_member_of_const_struct.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/struct/test_error_assign_to_member_of_const_struct.c"
   (struct Struct~0
      (member x `int`)
      (member y `int const`)
      (member z `int`))
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (struct Struct~0
            (member x `int`)
            (member y `int const`)
            (member z `int`))
         (declaration value~3 `struct Struct~0 complete const`
            (braced
               1
               2
               3))
         (expression
            (assign
               (dot x
                  (name value~3 `struct Struct~0 complete const`))
               42))
         (expression
            (assign
               (dot y
                  (name value~3 `struct Struct~0 complete const`))
               123))
         (expression
            (assign
               (dot z
                  (name value~3 `struct Struct~0 complete const`))
               27)))))

----- stderr -----
