panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__struct__test_error_assign_to_struct_with_const_member.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/struct/test_error_assign_to_struct_with_const_member.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/struct/test_error_assign_to_struct_with_const_member.c"
   (struct Struct~0
      (member x `int`)
      (member y `int const`)
      (member z `int`))
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (declaration value~3 `struct Struct~0 complete`
            (braced
               1
               2
               3))
         (declaration copy~4 `struct Struct~0 complete` (name value~3 `struct Struct~0 complete`))
         (expression (assign (name value~3 `struct Struct~0 complete`) (name copy~4 `struct Struct~0 complete`))))))

----- stderr -----
