panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__struct__test_error_bitfields.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/struct/test_error_bitfields.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/struct/test_error_bitfields.c"
   (struct Struct~0
      (member x (bitfield-width 20) `int`))
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (declaration s~3 `struct Struct~0 complete` (braced ∅))
         (declaration ptr~4 `ptr<int>`
            (addressof
               (dot x
                  (name s~3 `struct Struct~0 complete`))))))
   (struct NonintegralBitfield~5
      (member bitfield (bitfield-width 42) `struct Struct~0 complete`))
   (struct TooLarge~6
      (member too_large_int (bitfield-width 123) `int`)
      (member b (bitfield-width 2) `bool`))
   (struct ZeroWidthBitfieldWithName~7
      (member x (bitfield-width 2) `int`)
      (member zero_length (bitfield-width 0) `int`)
      (member y (bitfield-width 2) `int`)))

----- stderr -----
