panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__struct__test_error_excess_initialisers_in_braced_initialisation_of_union.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/struct/test_error_excess_initialisers_in_braced_initialisation_of_union.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/struct/test_error_excess_initialisers_in_braced_initialisation_of_union.c"
   (union IntInt~0
      (member i `int`)
      (member u `unsigned int`))
   (struct T~1
      (member x `int`)
      (member y `int`))
   (union IntStruct~2
      (member x `int`)
      (member t `struct T~1 complete`))
   (function-definition
      main~3 `fn() -> int`
      (compound-statement
         (declaration int_int~5 `union IntInt~0 complete`
            (braced
               1
               2))
         (declaration int_struct~6 `union IntStruct~2 complete`
            (braced
               1
               2
               3)))))

----- stderr -----
