panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__struct__test_error_incompatible_redeclaration.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/struct/test_error_incompatible_redeclaration.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/struct/test_error_incompatible_redeclaration.c"
   (struct T~0
      (member x `int`))
   (struct T~0
      (member l `long`)))

----- stderr -----
