panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__struct__test_error_invalid_member_declaration.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/struct/test_error_invalid_member_declaration.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: default struct members are not allowed
   ╭─[panko/tests/cases/struct/test_error_invalid_member_declaration.c:2:13]
   │
 2 │     int a = 42;
   │         ┬   ─┬  
   │         │    ╰── help: remove this initialiser
   │         │       
   │         ╰─────── in the declaration of this struct member
───╯

Error: members cannot have storage classes
   ╭─[panko/tests/cases/struct/test_error_invalid_member_declaration.c:3:5]
   │
 3 │     static long b;
   │     ───┬──      ┬  
   │        │        ╰── in this member declaration
   │        │           
   │        ╰─────────── member `b` declared with storage class `static`
───╯

Error: members cannot have storage classes
   ╭─[panko/tests/cases/struct/test_error_invalid_member_declaration.c:4:5]
   │
 4 │     typedef char c;
   │     ───┬───      ┬  
   │        │         ╰── in this member declaration
   │        │            
   │        ╰──────────── member `c` declared with storage class `typedef`
───╯
